--- a/lib/components/posts/_post.styl
+++ b/lib/components/posts/_post.styl
@@ -1,5 +1,6 @@
 .post
-  margin-bottom 5rem
+  overflow hidden
+  padding-bottom 5rem
   position relative
   .markdown-container
     & > h1, & > h2, & > h3
