--- a/lib/globals/_defaults.styl
+++ b/lib/globals/_defaults.styl
@@ -3,12 +3,14 @@
 
 .rlb
   background main-bg
+
+.rlb
   box-sizing border-box
 
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   font-weight: 300;
-
-  padding 1rem
+  padding 0
+  margin 0
 
   p
     ft-base()
