--- a/lib/components/posts/_post-nav.styl
+++ b/lib/components/posts/_post-nav.styl
@@ -1,12 +1,17 @@
 .post-nav
   position fixed
-  bottom 0
+
+  top 100%
   left 0
   right 0
   width 100%
   background-color menu-bg
   padding .5rem 1rem
   text-align center
+  z-index 10
 
-  &.out-of-scope
-    top 100%
+
+
+  .post:target &
+    bottom 0
+    top auto
