--- a/lib/components/posts/_post.styl
+++ b/lib/components/posts/_post.styl
@@ -1,6 +1,7 @@
 .post
   overflow hidden
-  padding-bottom 5rem
+  padding-top 3rem
+  padding-bottom 3rem
   position relative
   .markdown-container
     & > h1, & > h2, & > h3
@@ -18,3 +19,9 @@
     text-transform uppercase
     font-size .8rem
     font-size 3vw
+
+
+.help-line
+  position absolute
+  color red
+  background-color red
