--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -13,4 +13,5 @@ html(lang="en", class="no-js")
     block body
 
     script(src="//code.jquery.com/jquery-2.1.4.min.js")
+    script(src="//hammerjs.github.io/dist/hammer.min.js")
     script(src="assets/javascripts/main.js", async="true")
