big step in usability

--- a/lib/components/hero-banner/_hero-banner.styl
+++ b/lib/components/hero-banner/_hero-banner.styl
@@ -12,6 +12,8 @@ hero-banner-bg = pearl-black
 
 .rlb .hero-banner
   background-color hero-banner-bg
+  background-repeat no-repeat
+  background-size cover
 
   .hero-banner-message
     padding 1rem
