--- a/lib/components/posts/_post-nav.styl
+++ b/lib/components/posts/_post-nav.styl
@@ -1,17 +1,4 @@
-.post-nav
-  position fixed
-
-  top 100%
-  left 0
-  right 0
-  width 100%
-  background-color menu-bg
-  padding .5rem 1rem
-  text-align center
-  z-index 10
-
-
-
-  .post:target &
-    bottom 0
-    top auto
+// .post-nav
+//   .post:target &
+//     bottom 0
+//     top auto
