--- a/lib/globals/_defaults.styl
+++ b/lib/globals/_defaults.styl
@@ -1,12 +1,13 @@
 @require '_reset'
 @require "_typebase"
 
+*
+  box-sizing border-box
+
 .rlb
   background main-bg
 
 .rlb
-  box-sizing border-box
-
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif
   font-weight: 300;
   padding 0
