--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -2,6 +2,7 @@
 html(lang="en", class="no-js")
   head
     meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title relentless ux - frontend architecture
     link(rel="stylesheet", href="./assets/styles/main.css")
     script.
