--- a/lib/components/scroll-status/_scroll-status.styl
+++ b/lib/components/scroll-status/_scroll-status.styl
@@ -10,20 +10,11 @@
 
 .scroll-status-bubble
   background-color rgb(200, 200, 200)
-  height 6px
-  width 6px
+  height .2rem
+  width .2rem
   display inline-block
   border-radius 10px
   margin-right .5rem
 
   &.active
     background-color rgb(124, 122, 122)
-
-
-.help-line
-  color red
-  border-color red
-  position absolute
-  left 0
-  width 100%
-  top 0
