--- a/lib/globals/_defaults.styl
+++ b/lib/globals/_defaults.styl
@@ -4,6 +4,11 @@
 *
   box-sizing border-box
 
+@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
+  html
+    font-size 200%
+
+
 .rlb
   background main-bg
 
