--- a/lib/components/posts/_post.styl
+++ b/lib/components/posts/_post.styl
@@ -3,6 +3,7 @@
   padding-top 3rem
   padding-bottom 3rem
   position relative
+
   .markdown-container
     & > h1, & > h2, & > h3
       &:first-child + p::first-letter
@@ -18,8 +19,7 @@
   margin-top 0
 
 .post-category, .post-date, .post-author
-  font-size .8rem
-  font-size 3.5vw
+  font-size .7rem
 
 .post-category, .post-date
   text-transform uppercase
@@ -30,16 +30,18 @@
 
 .post-footer
   position fixed
+  -webkit-transform translateZ(0)
 
   top 100%
   left 0
   width 100%
   background-color menu-bg
-  padding .5rem
+  padding 0 .5rem .5rem .5rem
   z-index 10
+  border-bottom 100px solid white
 
   .post:target &
-    bottom 0
+    bottom -100px
     top auto
 
   .headline-sub
@@ -47,8 +49,12 @@
     padding 0
     font-weight 700
     width 100%
-    margin-top .5rem
+    margin-top .3rem
     line-height 1.3
+    font-size .5rem
+
+    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
+      font-size .8rem
 
 .post-nav
   text-align center
