fixed asset paths

--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -3,7 +3,7 @@ html(lang="en", class="no-js")
   head
     meta(charset="UTF-8")
     title relentless ux - frontend architecture
-    link(rel="stylesheet", href="./assets/styles/main.css")
+    link(rel="stylesheet", href="/assets/styles/main.css")
     script.
       /*! modernizr 3.2.0 (Custom Build) | MIT *
        * http://modernizr.com/download/?-setclasses-shiv !*/
@@ -14,4 +14,4 @@ html(lang="en", class="no-js")
 
     script(src="//code.jquery.com/jquery-2.1.4.min.js")
     script(src="//hammerjs.github.io/dist/hammer.min.js")
-    script(src="assets/javascripts/main.js", async="true")
+    script(src="/assets/javascripts/main.js", async="true")
