--- a/lib/main.styl
+++ b/lib/main.styl
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
 @import url('https://fonts.googleapis.com/css?family=Lora');
 
+@require "globals/_mqhelper"
 @require "globals/_typography"
 @require "globals/_colors_semantic"
 @require "globals/_defaults"
