--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -14,4 +14,7 @@ html(lang="en", class="no-js")
 
     script(src="//code.jquery.com/jquery-2.1.4.min.js")
     script(src="//hammerjs.github.io/dist/hammer.min.js")
+
+    | <script>window.jQuery || document.write('<script src="assets/vendor/jquery.js"><\/script>')</script>
+    | <script>window.Hammer || document.write('<script src="assets/vendor/hammer.js"><\/script>')</script>
     script(src="/assets/javascripts/main.js", async="true")
