--- a/lib/components/posts/_post.styl
+++ b/lib/components/posts/_post.styl
@@ -39,9 +39,10 @@
   z-index 10
   border-bottom 100px solid white
 
-  .post:target &
+  .post:target &, .post.active &
     bottom -100px
     top auto
+
 
   .headline-sub
     margin 0
