--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -4,6 +4,9 @@ html(lang="en", class="no-js")
     meta(charset="UTF-8")
     title relentless ux - frontend architecture
     link(rel="stylesheet", href="/assets/styles/main.css")
+
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+
     script.
       /*! modernizr 3.2.0 (Custom Build) | MIT *
        * http://modernizr.com/download/?-setclasses-shiv !*/
