--- a/templates/index.jade
+++ b/templates/index.jade
@@ -3,4 +3,4 @@ extends ./layouts/posts.jade
 block content
   +post("The realms of distributed frontend integration", "distributed-frontend-integration")
   
-  +post("Progressive Enhancement is not immune to JS errors", "progressive-enhancement-error-immunity")
+  +post("Progressive Enhancement is not cure to JS exceptions", "pe-exception-immunity")
