--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -2,7 +2,7 @@
 html(lang="en", class="no-js")
   head
     meta(charset="UTF-8")
-    title relentless ux - frontend architecture
+    title relentless development
     link(rel="stylesheet", href="/assets/styles/main.css")
 
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
