--- a/templates/layouts/posts.jade
+++ b/templates/layouts/posts.jade
@@ -15,6 +15,6 @@ block body
     // BG image from https://unsplash.com/photos/8mqOw4DBBSg
     header.hero-banner(style="background-image: url(assets/images/artichokes.jpg)")
       .hero-banner-message
+        h1.headline-primary Relentless thoughts on software development,<br> frontend architecture<br> and related stuff
         p.headline-sub by Falk Hoppe
-        h1.headline-primary Relentless<br> thoughts on frontend architecture<br> and related stuff
         a.btn.btn-primary.hero-banner-call2action(href="#rlb-main") read
