--- a/templates/helper/post_helper.jade
+++ b/templates/helper/post_helper.jade
@@ -1,7 +1,8 @@
 mixin post(headline, markdownInclude)
   article.post(id=markdownInclude)
     header
-      h1.headline-primary= headline
+      a(href="/posts/#{markdownInclude}.html")
+        h1.headline-primary= headline
       
       p.post-meta(title="2015/12/29")
         span.post-category Frontend Architecture • 
@@ -10,7 +11,6 @@ mixin post(headline, markdownInclude)
         
     .markdown-container
       +#{markdownInclude}
-  
       
     footer.post-footer
       nav.post-nav 
