--- a/templates/layouts/posts.jade
+++ b/templates/layouts/posts.jade
@@ -1,5 +1,5 @@
 include ../helper/post_helper.jade
-include ../tmp/post_include_mixins.jade
+include ../../tmp/post_include_mixins.jade
 
 extends ./frame.jade
 
