--- a/lib/components/scroll-status/_scroll-status.styl
+++ b/lib/components/scroll-status/_scroll-status.styl
@@ -1,10 +1,7 @@
 .scroll-status
-  margin-top 0
-  margin-bottom 0
+  margin 0 auto
   padding-top 0
   padding-bottom 0
-  margin-left auto
-  margin-right auto
 
 .scroll-status-bubble
   background-color rgb(200, 200, 200)
