--- a/lib/components/posts/_post.styl
+++ b/lib/components/posts/_post.styl
@@ -18,6 +18,7 @@
 
 .post-category, .post-date, .post-author
   font-size .7rem
+  font-size 3.5vw
 
 .post-category, .post-date
   text-transform uppercase
