--- a/templates/helper/post_helper.jade
+++ b/templates/helper/post_helper.jade
@@ -14,8 +14,11 @@ mixin post(headline, markdownInclude)
       
     footer.post-footer
       nav.post-nav 
+        button.open Open
         ul.scroll-status
-      h3.headline-sub= headline
+          
+      .post-footer-content
+        h3.headline-sub= headline
   
         
   
