--- a/templates/layouts/footer.jade
+++ b/templates/layouts/footer.jade
@@ -1,6 +1,9 @@
 footer.rlb-footer
-  hr
   h3.headline-primary Falk Hoppe
   
   p.headline-sub Software Developer
   
+  .copy-right-notice
+    p.copyright-hint 
+      | &copy; Copyright #{copyrightYear} 
+      a(href="https://github.com/mechanoid") Falk Hoppe
