--- a/lib/components/posts/_post-footer.styl
+++ b/lib/components/posts/_post-footer.styl
@@ -1,16 +1,17 @@
 .post-footer
+  box-sizing border-box
   position fixed
 
   top 100%
   left 0
   width 100%
   background-color menu-bg
-  padding 0 .5rem .5rem .5rem
+  padding .5rem .5rem 1rem .5rem
   z-index 10
-  border-bottom 100px solid white
+  border-bottom 500px solid white
 
   .post:target &, .post.active &
-    bottom -100px
+    bottom -500px
     top auto
 
   .headline-sub
@@ -25,10 +26,32 @@
     @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)
       font-size .8rem
 
+  .post-footer-content
+    .headline-sub
+      padding-top .5rem
+      font-size .65rem
 
+    .open
+      display none
 
-  &
-    height 3rem
+.js
+  .post-footer-content
+    overflow hidden
+    max-height 0
+    transition: max-height 0.35s ease-out;
 
-    &.active
-      //
+  .post-footer
+    .scroll-status
+      display inline
+
+    .open
+      display block
+      position absolute
+      left .5rem
+      top 1rem
+      // transform: translateY(-50%);
+
+  .post-footer.active
+    .post-footer-content
+      max-height 500px
+      transition: max-height 0.25s ease-in;
