--- a/lib/components/posts/_post-nav.styl
+++ b/lib/components/posts/_post-nav.styl
@@ -1,3 +1,9 @@
 .post-nav
   text-align center
   overflow hidden
+
+  & .open
+    background none
+    border none
+    outline none
+    cursor pointer
