--- a/lib/globals/_defaults.styl
+++ b/lib/globals/_defaults.styl
@@ -23,3 +23,14 @@ html
 
   em
     font-style italic
+
+
+.rlb a
+  text-decoration none
+  color pearl-black
+
+  &:hover
+    text-decoration underline
+
+.highlight
+  color red
