--- a/lib/globals/_typography.styl
+++ b/lib/globals/_typography.styl
@@ -9,3 +9,11 @@ ft-base()
 
 ft-primary()
   ft-montserrat()
+
+.fa
+  font-size .8rem
+  position relative
+  transform translateY(15%)
+
+  &.fa-twitter
+    color twitter-blue
