--- a/lib/main.styl
+++ b/lib/main.styl
@@ -1,9 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
-@import url('https://fonts.googleapis.com/css?family=Lora');
+@import url('//fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('//fonts.googleapis.com/css?family=Lora');
+@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css");
 
 @require "globals/_mqhelper"
-@require "globals/_typography"
 @require "globals/_colors_semantic"
+@require "globals/_typography"
 @require "globals/_defaults"
 
 @require "components/**/_*"
