--- a/templates/layouts/footer.jade
+++ b/templates/layouts/footer.jade
@@ -1,9 +1,21 @@
 footer.rlb-footer
-  h3.headline-primary Falk Hoppe
-  
-  p.headline-sub Software Developer
+  .author-information
+    .author Falk Hoppe
+    .author-subline 
+      | Software Dev in 
+      span.highlight ♥ 
+      |  with Javascript, GO, Ruby, HTML, CSS and at 
+      a(href="http://www.innoq.com") innoQ
+      
+    .social-networks
+      .twitter 
+        i(class="fa fa-twitter") 
+        | 
+        a(href="https://twitter.com/nothing_box") @nothing_box
+    
   
   .copy-right-notice
     p.copyright-hint 
-      | &copy; Copyright #{copyrightYear} 
-      a(href="https://github.com/mechanoid") Falk Hoppe
+      | &copy; Copyright #{copyrightYear}. 
+      br
+      | All rights reserved.
