--- a/templates/helper/post_helper.jade
+++ b/templates/helper/post_helper.jade
@@ -14,7 +14,7 @@ mixin post(headline, markdownInclude)
       
     footer.post-footer
       nav.post-nav 
-        button.open Open
+        button.open.fa.fa-info
         ul.scroll-status
           
       .post-footer-content
