--- a/lib/components/posts/_post-footer.styl
+++ b/lib/components/posts/_post-footer.styl
@@ -1,4 +1,5 @@
 .post-footer
+  display none
   box-sizing border-box
   position fixed
 
@@ -6,7 +7,7 @@
   left 0
   width 100%
   background-color menu-bg
-  padding .5rem .5rem 1rem .5rem
+  padding .5rem 1rem 1rem 1rem
   z-index 10
   border-bottom 500px solid white
 
@@ -35,6 +36,9 @@
       display none
 
 .js
+  .post-footer
+    display block
+
   .post-footer-content
     overflow hidden
     max-height 0
@@ -44,12 +48,20 @@
     .scroll-status
       display inline
 
-    .open
+    .open, .copy-link
       display block
       position absolute
-      left .5rem
-      top 1rem
-      // transform: translateY(-50%);
+      top .5rem
+      transform: translateY(20%);
+
+    .open
+      left 1rem
+
+    .copy-link
+      right 1rem
+      transform: translateY(30%);
+      &:hover
+        text-decoration none
 
   .post-footer.active
     .post-footer-content
