--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -20,4 +20,6 @@ html(lang="en", class="no-js")
 
     | <script>window.jQuery || document.write('<script src="assets/vendor/jquery.js"><\/script>')</script>
     | <script>window.Hammer || document.write('<script src="assets/vendor/hammer.js"><\/script>')</script>
+
+    script(src="/assets/javascripts/clipboard.js")
     script(src="/assets/javascripts/main.js", async="true")
