--- a/lib/components/footer/_author-information.styl
+++ b/lib/components/footer/_author-information.styl
@@ -1,12 +1,11 @@
 .rlb .rlb-footer .author-information
   ft-montserrat()
-  background-color #000
+  background-color pearl-white
   text-align center
   padding 3rem 1rem
-  color #fff
+
 
   a
-    color #fff
     font-size .6rem
 
   .author-subline
