--- a/lib/components/footer/_copyright-notice.styl
+++ b/lib/components/footer/_copyright-notice.styl
@@ -1,8 +1,9 @@
 .rlb .rlb-footer .copy-right-notice
-  background-color #fff
+  background-color #00bdff
+  color #fff
   text-align center
   padding 3rem 1rem
-  padding-bottom 5rem
+  padding-bottom 6rem
 
   .copyright-hint
     ft-montserrat()
