--- a/lib/globals/_defaults.styl
+++ b/lib/globals/_defaults.styl
@@ -27,10 +27,14 @@ html
 
 .rlb a
   text-decoration none
-  color pearl-black
+  color link-color
 
   &:hover
+    color link-hover
     text-decoration underline
 
-.highlight
-  color red
+  &:active
+    color link-active
+
+  .highlight
+    color red
