--- a/templates/layouts/post.jade
+++ b/templates/layouts/post.jade
@@ -4,7 +4,7 @@ extends ./frame.jade
 
 block body
   main.rlb-content
-    section.post
+    section.post-view
       block content
         
     include footer.jade
