--- a/lib/globals/_colors_semantic.styl
+++ b/lib/globals/_colors_semantic.styl
@@ -4,3 +4,6 @@ main-bg = decent-grey
 contrast-bg = pearl-white
 menu-bg = pearl-white
 twitter-blue = #4099FF
+link-color = pearl-black
+link-hover = #FE4586
+link-active = #e83976
