some random stuff

--- a/lib/components/buttons/_button-primary.styl
+++ b/lib/components/buttons/_button-primary.styl
@@ -1,9 +1,9 @@
 btn-primary-bg = #fff
-btn-primary-bg-contrast = #a890a7
+btn-primary-bg-contrast = link-hover
 btn-primary-ft = #000000
 btn-primary-ft-contrast = #fff
 
-.btn-primary
+.rlb .btn-primary
   display block
   border none
   background-color btn-primary-bg
@@ -17,3 +17,4 @@ btn-primary-ft-contrast = #fff
   &:hover
     background-color btn-primary-bg-contrast
     color btn-primary-ft-contrast
+    text-decoration none
