--- a/lib/main.styl
+++ b/lib/main.styl
@@ -5,6 +5,7 @@
 @require "globals/_mqhelper"
 @require "globals/_colors_semantic"
 @require "globals/_typography"
+@require "globals/_animations"
 @require "globals/_defaults"
 
 @require "components/**/_*"
