--- a/templates/layouts/posts.jade
+++ b/templates/layouts/posts.jade
@@ -11,9 +11,9 @@ block body
           
       include footer.jade
 
-    
+  
     // BG image from https://unsplash.com/photos/8mqOw4DBBSg
-    header.hero-banner(style="background-image: url(assets/images/artichokes.jpg)")
+    header.hero-banner(style="background-image: url(assets/images/stars.jpg)")
       .hero-banner-message
         h1.headline-primary Relentless thoughts on software development,<br> frontend architecture<br> and related stuff
         p.headline-sub by Falk Hoppe
