--- a/lib/components/buttons/_button-primary.styl
+++ b/lib/components/buttons/_button-primary.styl
@@ -1,18 +1,19 @@
-btn-primary-bg = #fff
+btn-primary-bg = pearl-white
 btn-primary-bg-contrast = link-hover
-btn-primary-ft = #000000
+btn-primary-ft = pearl-black
 btn-primary-ft-contrast = #fff
 
+.rlb .btn
+  padding .5rem
+  text-align center
+  font-weight 100
+  font-family 'Montserrat', sans-serif
 .rlb .btn-primary
   display block
   border none
   background-color btn-primary-bg
   color btn-primary-ft
-  padding .5rem
-  text-align center
-  font-weight 100
   text-transform uppercase
-  font-family 'Montserrat', sans-serif
 
   &:hover
     background-color btn-primary-bg-contrast
