--- a/lib/components/hero-banner/index.styl
+++ b/lib/components/hero-banner/index.styl
@@ -1,4 +1,6 @@
-hero-banner-bg = pearl-black
+@require "../../globals/_mqhelper"
+
+xhero-banner-bg = pearl-black
 
 .rlb .hero-banner-content
   background-color main-bg
