--- a/lib/globals/_typography.styl
+++ b/lib/globals/_typography.styl
@@ -13,7 +13,10 @@ ft-primary()
 .fa
   font-size .8rem
   position relative
-  transform translateY(15%)
 
   &.fa-twitter
     color twitter-blue
+    transform translateY(15%)
+
+  &.fa-github-alt
+    transform translateY(10%)
