--- a/templates/layouts/footer.jade
+++ b/templates/layouts/footer.jade
@@ -11,7 +11,12 @@ footer.rlb-footer
       .twitter 
         i(class="fa fa-twitter") 
         | 
-        a(href="https://twitter.com/nothing_box") @nothing_box
+        a(href="https://twitter.com/nothing_box") twitter/@nothing_box
+    
+      .github 
+        i(class="fa fa-github-alt") 
+        | 
+        a(href="https://github.com/mechanoid") github/@mechanoid
     
   
   .copy-right-notice
