--- a/templates/layouts/posts.jade
+++ b/templates/layouts/posts.jade
@@ -1,9 +1,12 @@
-include ../helper/post_helper.jade
 include ../../tmp/post_include_mixins.jade
+include ../helper/post_helper.jade
+include ../helper/nav.jade
 
 extends ./frame.jade
 
 block body
+  +main-nav()
+  
   .hero-banner-page
     main.rlb-content.hero-banner-content(id="rlb-main")
       section.posts
