--- a/lib/components/nav/index.styl
+++ b/lib/components/nav/index.styl
@@ -8,7 +8,8 @@
   background-color #fff
   width 100%
   z-index 999
-  -webkit-transform-style: preserve-3d;
+  -webkit-transform-style preserve-3d
+  -webkit-overflow-scrolling touch
 
   &.active
     animation: nav-slide 0.2s forwards;
