--- a/templates/index.jade
+++ b/templates/index.jade
@@ -3,5 +3,6 @@ extends ./layouts/posts.jade
 block content
   +article-data
     each post, id in ctx
-      +post(post, id)
+      - first = Object.keys(ctx)[0] === id ? true : false
+      +post(post, id, false, first)
       
