--- a/lib/globals/_mqhelper.styl
+++ b/lib/globals/_mqhelper.styl
@@ -2,8 +2,6 @@ desktop()
   @media only screen and (min-width: 768px)
     {block}
 
-// mq_desktop_lowres()
-//   @media
-//   (-webkit-min-device-pixel-ratio: 3) and (min-device-width: 416px),
-//   (min-resolution: 192dpi) and (min-device-width: 416px)
-//     {block}
+mq_highres()
+  @media (-webkit-min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 3), (min-resolution: 192dpi)
+    {block}
