--- a/templates/layouts/frame.jade
+++ b/templates/layouts/frame.jade
@@ -3,6 +3,7 @@ html(lang="en", class="no-js")
   head
     meta(charset="UTF-8")
     title relentless development
+    link(rel="stylesheet", href="/assets/styles/prism.css")
     link(rel="stylesheet", href="/assets/styles/main.css")
 
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
@@ -16,10 +17,10 @@ html(lang="en", class="no-js")
     block body
 
     script(src="//code.jquery.com/jquery-2.1.4.min.js")
-    script(src="//hammerjs.github.io/dist/hammer.min.js")
 
-    | <script>window.jQuery || document.write('<script src="assets/vendor/jquery.js"><\/script>')</script>
-    | <script>window.Hammer || document.write('<script src="assets/vendor/hammer.js"><\/script>')</script>
+    | <script>window.jQuery || document.write('<script src="assets/javascripts/jquery.js"><\/script>')</script>
 
     script(src="/assets/javascripts/clipboard.js")
+    script(src="/assets/javascripts/hammer.js")
+    script(src="/assets/javascripts/prism.js")
     script(src="/assets/javascripts/main.js", async="true")
