--- a/lib/components/posts/_post.styl
+++ b/lib/components/posts/_post.styl
@@ -1,3 +1,10 @@
+first-letter-highlighting()
+  font-size 3rem
+  float left
+  line-height 3rem
+  padding-right .5rem
+
+
 .post-view
   padding 1rem
   animation: pulse 0.2s linear 1;
@@ -12,11 +19,11 @@
   .markdown-container
     & > h1, & > h2, & > h3
       &:first-child + p::first-letter
-        font-size 3rem
-        float left
-        line-height 3rem
-        padding-right .5rem
+        first-letter-highlighting()
 
+    & > p:first-child::first-letter
+      first-letter-highlighting()
+      
 .post-meta
   ft-primary()
   margin-top 0
