--- a/lib/components/footer/index.styl
+++ b/lib/components/footer/index.styl
@@ -1,5 +1,6 @@
 @require './_author-information'
 @require './_copyright-notice'
+@require './_impressum-link'
 
 .rlb .rlb-footer
   overflow hidden
