--- a/lib/components/nav/_nav-list.styl
+++ b/lib/components/nav/_nav-list.styl
@@ -28,3 +28,15 @@
 
   &:last-of-type
     border-bottom 1px solid #e6e6e6
+
+
+  &.impressum
+    margin-top 3rem
+    border-top none
+    border-bottom none
+
+    a, &:before
+      color lighten(rgb(0, 0, 0), 70%)
+
+    &:hover a, &:hover:before
+      color #000
