--- a/templates/layouts/footer.jade
+++ b/templates/layouts/footer.jade
@@ -20,6 +20,9 @@ footer.rlb-footer
     
   
   .copy-right-notice
+    p.impressum-link
+      a(href="/impressum.html") Impressum
+      
     p.copyright-hint 
       | &copy; Copyright #{copyrightYear}. 
       br
