--- a/templates/layouts/posts.jade
+++ b/templates/layouts/posts.jade
@@ -18,6 +18,6 @@ block body
     // BG image from https://unsplash.com/photos/8mqOw4DBBSg
     header.hero-banner(style="background-image: url(assets/images/stars.jpg)")
       .hero-banner-message
-        h1.headline-primary Relentless thoughts on software development,<br> frontend architecture<br> and related stuff
+        h1.headline-primary Relentless thoughts on software development,<br> software architecture<br> and related stuff
         p.headline-sub by Falk Hoppe
         a.btn.btn-primary.hero-banner-call2action(href="#rlb-main") read
