--- a/lib/main.styl
+++ b/lib/main.styl
@@ -22,3 +22,19 @@ code
 
 
   // background transparent
+
+
+.static-view
+  padding 1rem
+  animation: pulse 0.2s linear 1;
+
+  h3
+    margin-bottom 1rem
+
+  p
+    padding 0
+    margin-top 0
+    margin-bottom .5rem
+
+  strong
+    font-weight bold
