--- a/lib/components/posts/index.styl
+++ b/lib/components/posts/index.styl
@@ -6,6 +6,12 @@
 .posts
   padding 1rem
 
+  +tablet()
+    padding 1rem 10%
+
+  +desktop()
+    padding 1rem 10% 1rem 40%
+
 
   a.fa:hover
     color link-hover
