minor fixed and improvements

--- a/lib/components/nav/_nav-list.styl
+++ b/lib/components/nav/_nav-list.styl
@@ -40,3 +40,11 @@
 
     &:hover a, &:hover:before
       color #000
+
+
+  .post-nav-meta, .post-nav-meta span
+    ft-montserrat()
+    margin-top 0
+    color rgb(158, 158, 158)
+    font-size .5rem !important
+    font-weight 100
