--- a/templates/helper/nav.jade
+++ b/templates/helper/nav.jade
@@ -1,5 +1,7 @@
 mixin main-nav
   +article-data
+    - dateShortOptions = { weekday: "short", year: "numeric", month: "narrow" };
+    
     nav.main.nav
       button.nav-toggle.btn-primary.fa.fa-reorder
       button.nav-close.fa.fa-remove
@@ -8,8 +10,15 @@ mixin main-nav
         li.nav-item.fa.fa-home
           a.nav-link(href="/") Home
         each post, id in ctx
+          - date = new Date(post.date)
+          - shortDate = date.toLocaleDateString("en-US", dateOptions);
+          
           li.nav-item.fa.fa-star
             a.nav-link(href="/#{id}.html")= post.title
+            p.post-nav-meta
+              span.post-date= shortDate
+              |  • 
+              span.post-category= post.category
 
         li.nav-item.fa.fa-legal.impressum
           a.nav-link(href="/impressum.html") Impressum
